--- a/vision.html
+++ b/vision.html
@@ -191,7 +191,7 @@
             <a href="https://tesfaaking.github.io/oda-ICT-club-website/index1.html">Home</a>
             <a href="https://tesfaaking.github.io/oda-ICT-club-website/index22.html">About Us</a>
             <a href="https://tesfaaking.github.io/oda-ICT-club-website/mission.html">Mission</a>
-            <a href="https://tesfaaking.github.io/oda-ICT-club-website/vision.htmls">Vision</a>
+            <a href="https://tesfaaking.github.io/oda-ICT-club-website/vision.html">Vision</a>
             <a href="https://tesfaaking.github.io/oda-ICT-club-website/contact.html#">Contact Us</a>
             <a href="https://tesfaaking.github.io/oda-ICT-club-website/library.html#library">Library</a>
         </nav>
