--- a/index22.html
+++ b/index22.html
@@ -201,6 +201,34 @@
         <hr>
         <h2>OROMIA DEVELOPMENT ASSOCIATION SPECIAL BOARDING SCHOOL BISHOFTU BRANCH</h2>
         <hr>
+        <h1>Story of establishment:</h1>
+        <div class="description">
+            <pre>
+        As we felt the power that comes from empowering youth's with technology is the weapon for 
+        the development of the digital realm, a seed of curiosity was planted in our mind. As we the 
+        founders of ICT club was taking part in AddisCoder Spark 2024. Summer Program.
+        Once the Idea of establishing new ODA ICT club blown our mind and we were deeply inspired to 
+        empower pupils in our center of excellence. Imaging the future of this inspiring club will be 
+        bright we the founders of the Club organized our aims and strategies to be successful at the 
+        establishment. Thanks for God the establishment of the Club was done successfully as a result of 
+        the aid we gained from the school administration and students.
+    </pre>
+        </div>
+        <div class="description">
+            <pre>
+                Organizing our club leaders formally in the following sequence helped as to achieve the goal of our club:
+1 Yosef Feyisa (chairman of the Club)
+2 Fenet Gemechis  (Vice chairman of the Club) 
+3 Tesfaye Tilahun(secretary of the Club)
+4 Mikiyas Birhanu(deputy secretary of the club)
+5 Sena Chala (mini media staff)
+6 Natinael Taye (mini media staff)
+7 Nahom(over all manager and project coordinator)
+Great thanks for Our leader and over all coordinator Teacher Misgana
+            </pre>
+
+
+        </div>
         <h1>WHO ARE WE?</h1>
 
         <div class="description">
